// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox.js matches snapshot 1`] = `
<div
  className="checkBoxSelected"
  key="1"
  onClick={[Function]}
>
  1
  . 
  [ ] 
  Test
</div>
`;

exports[`CheckBox.js should be checked 1`] = `
<div
  className="checkBox"
  key="1"
  onClick={[Function]}
>
  1
  . 
  [x] 
  Test
</div>
`;
